# Healthcare-Documentation-Assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: 00_generate_data.py  01_eda.py  02_train_classifier.py  03_evaluate_phi.py  04_build_index.py  05_query.py  06_summarize.py
src/healthcare_assistant/: __init__.py  config.py
src/healthcare_assistant/data/: __init__.py  generate_synthetic.py  loader.py
src/healthcare_assistant/eda/: __init__.py  explore.py
src/healthcare_assistant/rag/: __init__.py  chunking.py  embeddings.py  generator.py  retriever.py  vector_store.py
tests/: test_generator.py  test_pipeline.py  test_rag.py
